# asa1984.dev

./: .env  .env.production  .gitignore  Cargo.toml  README.md  biome.json  biome.jsonc  export-images.config.js  flake.nix  next.config.mjs  package.json  panda.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  turbo.json  wrangler.example.toml  wrangler.toml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  deploy-secret.yaml  deploy.yaml  dev.yaml  migrate.yaml  prod.yaml
apps/api/: package.json
apps/api/src/: main.ts
apps/cli/: .env.example  Cargo.toml  build.ts  generate-gql-schema.ts  package.json  tsconfig.json
apps/cli/schema/: schema.graphql
apps/cli/src/: file.rs  gql.rs  main.rs  main.ts
apps/web/: .gitignore  biome.json  next.config.mjs  package.json  tsconfig.json
apps/web/schema/: schema.graphql
ci/: dev.sh  prod.sh
crates/cli/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: model.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  lib.rs  router.rs
crates/server/src/app/: blog.rs
crates/server/src/gql/: mutation.rs  query.rs
nix/: worker-build.nix
post/: first.md  old-fresh.md
posts/: first.md  old-fresh.md
public/context/: context.md
public/context/context/: post.md
public/context/thank-you/: post.md
public/posts/first/: post.md
src/app/: layout.tsx  not-found.tsx
src/app/(home)/: layout.tsx  page.tsx
src/app/(routes)/: layout.tsx
src/components/: icons.tsx  link_card.tsx  toolchip.tsx
src/config/: fonts.ts
src/styles/: fonts.ts
(+61 files in other folders)
