[workspace]
resolver = "2"
members = ["crates/cli", "crates/domain", "crates/server"]

[workspace.package]
version = "0.1.0"
authors = ["Asahi Sato"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
serde = { version = "1", features = ["derive"] }


[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
